Zip Archiver: Auto-detect and decode filenames when it's ShiftJIS.

Some third-party archivers generate ZIP files which claim file names
are coded in CP437 but actually put file names in other coding system.
This change attempts to guess which encoding system they are, and
decodes the file and directory names.

Not all detected encodings are supported by the TextDecoder. There is
also coding name difference between CED and TextDecoder. By this reason
the set of encodings to be handled is whitelisted and translated by a
mapping. We can simply add mappings to support other encodings.

We also assume that all the files are coded in the uniform coding
system, so as to stabilize the automated coding system detection.

Bug: 846195
Test: browser_tests --gtest_filter='*ZipFiles*FilesAppBrowserTest*' --gtest_also_run_disabled_tests
Cq-Include-Trybots: luci.chromium.try:closure_compilation
Change-Id: I284c189431d4fbac5554fb62507f1646517d279d
Reviewed-on: https://chromium-review.googlesource.com/c/1251684
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Reviewed-by: Anand Mistry <amistry@chromium.org>
Reviewed-by: Ben Wells <benwells@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600696}
Former-commit-id: f3b6430b37261dd5180011eba64f4d5cb494fc9d